# AFILSOP2017

aadcUser/: CMakeLists.txt
aadcUser/SOP_AutonomousDriving/: CMakeLists.txt  Data_Processing.cpp  NMPC_Controller.cpp  SOP_AutonomousDriving.cpp  SOP_AutonomousDriving.h  SOP_NMPC_Filter.h  State_Control.cpp
aadcUser/SOP_ConverterWheels/: CMakeLists.txt  SOP_ConverterWheels.cpp  SOP_ConverterWheels.h  stdafx.h
aadcUser/SOP_EmergencyBreak/: CMakeLists.txt  SOP_EmergencyBreak.cpp  SOP_EmergencyBreak.h  stdafx.h
aadcUser/SOP_ImageProcess/: CMakeLists.txt  ImageTranslate.cpp  ImageTranslate.h  SOP_ImageProcess.cpp  SOP_ImageProcess.h  stdafx.h
aadcUser/SOP_ImageProcess/Algorithm/: CameraEnvironment.h  FunctionType.h  InitialVariable.h
aadcUser/SOP_MarkerDetector/: CMakeLists.txt  SOP_MarkerDetector.cpp  SOP_MarkerDetector.h  aruco_helpers.h  stdafx.h
aadcUser/SOP_Position/: CMakeLists.txt  SOP_Position.cpp  SOP_Position.h  stdafx.h
aadcUser/SOP_SamplingRate/: CMakeLists.txt  SOP_SamplingRate.cpp  SOP_SamplingRate.h  stdafx.h
aadcUser/SOP_StatusTestGenerator/: CMakeLists.txt  SOP_StatusTestGenerator.cpp  SOP_StatusTestGenerator.h  displaywidget.cpp  displaywidget.h
aadcUser/SOP_WheelSpeedController/: CMakeLists.txt  SOP_WheelSpeedController.cpp  SOP_WheelSpeedController.h  stdafx.h
config/Team_AFILSOP/: Team_AFILSOP.prj
config/Team_AFILSOP/config/: system.Common.runninglayout  system.config_layout  system.xml
config/Team_AFILSOP/config/system_config_files/Lane_Detection/: __kernel_scheduling.config
config/Team_AFILSOP/config/system_config_files/Live/: __kernel_scheduling.config
config/Team_AFILSOP/config/system_config_files/Marker_Detection/: __kernel_scheduling.config
config/Team_AFILSOP/config/system_config_files/OfflineTest/: Signal_View.config  __kernel_scheduling.config
config/Team_AFILSOP/config/system_config_files/Playback/: __kernel_scheduling.config
config/Team_AFILSOP/config/system_config_files/Recording/: __kernel_scheduling.config
config/Team_AFILSOP/config/system_config_files/TestKonf/: Signal_View.config  __kernel_scheduling.config
config/Team_AFILSOP/files/: Maneuverlist.xml
